# schedulii-v2

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: project-task-template.md
.github/workflows/: ci-backend.yaml  ci-frontend.yaml  ci-project.yaml
assets/database/: pre_load.sql  schema.sql
assets/monitoring/: prometheus.yaml  prometheus.yml
assets/scripts/: pre-commit
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/handlers/: hello_world.rs
frontend/schedulii-ui/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/schedulii-ui/src/: App.tsx  main.tsx
frontend/schedulii-ui/src/__test__/: App.test.tsx
frontend/schedulii-ui/src/components/: Login.tsx
frontend/schedulii-ui/src/pages/: LandingPage.tsx
scripts/: pre-commit
